--- a/app/src/main/res/layout/fragment_language_selection.xml
+++ b/app/src/main/res/layout/fragment_language_selection.xml
@@ -9,7 +9,7 @@
 
         <variable
                 name="vm"
-                type="com.transport.mall.ui.authentication.pre_login.LanguageSelectionVM" />
+                type="com.transport.mall.ui.authentication.pre_login.languageselection.LanguageSelectionVM" />
 
         <variable
                 name="context"
