--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,6 +43,7 @@
                     android:textColor="@color/black" />
 
             <TextView
+                    android:id="@+id/tvAddNew"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Add New"
