1: Add dhaba NewDhabaActivity.kt 2: animated steps layout 3: Add dhaba fragment_add_dhaba_step3.xml 4: Animated confirmation dialog_add_dhaba_success.xml

--- a/app/src/main/res/layout/activity_new_dhaba.xml
+++ b/app/src/main/res/layout/activity_new_dhaba.xml
@@ -8,11 +8,16 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-        <com.baoyachi.stepview.HorizontalStepView
-                android:id="@+id/stepView"
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        <com.shuhart.stepview.StepView
+                android:id="@+id/step_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true" />
+                android:padding="16dp" />
 
         <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPager"
