--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey">#9A9A9A</color>
     <color name="gold_light">#FFF6DC</color>
     <color name="gold">#F7BA00</color>
+    <color name="light_red">#FFECED</color>
 </resources>
