--- a/app/src/main/res/layout/row_notifications.xml
+++ b/app/src/main/res/layout/row_notifications.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -26,6 +27,12 @@
 
     </data>
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/_3sdp"
+        app:cardBackgroundColor="@color/white">
+
     <LinearLayout
             android:id="@+id/containerLayout"
             android:layout_width="match_parent"
@@ -33,7 +40,7 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
                 android:padding="@dimen/_7sdp"
@@ -51,4 +58,5 @@
                 tools:text="Dhaba List" />
 
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
